--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <template id="note-template">
         <div class="note" tabindex="0">
             <div class="note-header">
+                <!-- Add image upload button next to quote and delete buttons -->
+                <button class="image-upload-btn" title="Upload image">📷</button>
                 <button class="quote-btn" title="Add inspirational quote">💡</button>
                 <button class="delete-btn" title="Delete note">🗑️</button>
+                <!-- Hidden image input for file selection -->
+                <input type="file" class="image-input" accept="image/*" style="display:none;" />
             </div>
             <div class="note-content" contenteditable="true"></div>
-            <!-- Image upload input (hidden) -->
-            <input type="file" class="image-input" accept="image/*" style="display:none;" />
             <!-- Image preview -->
             <img class="note-image" style="display:none; max-width:100%; max-height:150px; margin-top:6px;" />
-            <!-- Add a button to trigger image upload -->
-            <button class="image-upload-btn" title="Upload image">📷</button>
         </div>
     </template>
 
