HTML changed for small things...

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <!-- Sort buttons for sorting notes by timestamp -->
             <button id="sort-asc-btn" title="Sort notes by oldest">Sort ↑</button>
             <button id="sort-desc-btn" title="Sort notes by newest">Sort ↓</button>
-            <span class="instructions">Double-click anywhere to add a note</span>
+            <span class="instructions">Double-click anywhere to add a note
+                <br>Click the image icon to upload an image<br> Sort ascending or descending with the sort buttons</span>
+            <span class="version">v1.0.0</span>
+            </span>
         </div>
     </header>
 
